[gd_scene load_steps=3 format=3 uid="uid://dqlk28ia73xt"]

[ext_resource type="Script" uid="uid://bd0yfab0yktr6" path="res://scripts/utility_scripts/interaction_area.gd" id="1_f5uva"]
[ext_resource type="PackedScene" uid="uid://c2m262efaifcc" path="res://scenes/utilities/transition_mask.tscn" id="2_pa7vd"]

[node name="interaction_area" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_f5uva")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[node name="TransitionMask" parent="." instance=ExtResource("2_pa7vd")]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
